--- a/src/IPCApplicationBundle/Resources/views/layout.html.twig
+++ b/src/IPCApplicationBundle/Resources/views/layout.html.twig
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>{% block title %}Demo Bundle{% endblock %}</title>
+    {{ sonata_seo_metadatas() }}
+    {{ sonata_seo_link_canonical() }}
+    {{ sonata_seo_lang_alternates() }}
+    {{ sonata_seo_title() }}
 
     {% block stylesheets %}
         <link href="{{ asset('bundles/ipcapplication/css/bootstrap.min.css') }}" rel="stylesheet">
