build translated example (cherry picked from commit 012ad52)

--- a/src/IPCApplicationBundle/Resources/views/layout.html.twig
+++ b/src/IPCApplicationBundle/Resources/views/layout.html.twig
@@ -23,6 +23,7 @@
             <li><a href="http://symfony.com/doc/current/cmf/">Documentation</a></li>
             <li><a href="http://github.com/symfony-cmf">Github</a></li>
         </ul>
+        {{ locale_switcher(null, null, 'IPCApplicationBundle::switcher_links.html.twig') }}
     </div>
 </nav>
 
